Adapta Tarea 1 a Tomcat 7 / Java 8 (javax.servlet, Servlet 3.0)
- pom: javax.servlet-api 3.0.1, compilador source/target 1.8
- servlet: sin text blocks, genera el HTML con out.println; imports javax
- web.xml: <servlet>/<servlet-mapping> (Servlet 3.0) en vez de @WebServlet
- Probado en Apache Tomcat 7.0.109 + Temurin JDK 8

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>